selfhost/test/typechecker/indexing/tuple_error_hole.out
Error at %FILE_NAME%:1:23
Could not determine type for assignment
  |  val _ = (1, "two", [])[2]
                           ^
Type '<unknown>[]' has unfilled holes. Please use an explicit type annotation to denote the type
